Fixing spacing

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,7 +11,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
 p {
-	margin-bottom: 1rem;
+	margin-bottom: 1rem !important;
 }
 
 html {
